[package]
name = "student-service"
version = "0.1.0"
authors = ["Taylor Fraley <taylor.o.fraley@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
listenfd = "0.3.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
